[package]
name = "ittv_sdk"
version = "0.1.4"
edition = "2021"
description = "A library for interacting with the ITTV API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
